src/objects/LAC_Household__c.object
<CustomObject>
    <description>Object that contains details about the household that people can belong to</description>
    <fields>
        <fullName>CATS_Savings_Account_Bank__c</fullName>
        <label>CATS Savings Account Bank</label>
        <picklist>
            <picklistValues>
                <fullName>Bancolombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV Villas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco de Bogotá</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco de Occidente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco Popular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Davivienda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bancafé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco Santander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco Agrario de Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco Colpatria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Crops_Infrastructure__c</fullName>
        <label>Credit Crops Infrastructure</label>
        <picklist>
            <picklistValues>
                <fullName>Banano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cítricos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granos básicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apicultura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ganadería</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piscicultura</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Credit_Crops_Production__c</fullName>
        <label>Credit Crops Production</label>
        <picklist>
            <picklistValues>
                <fullName>Banano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cítricos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granos básicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apicultura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ganadería</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piscicultura</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Credit_Uses__c</fullName>
        <label>Credit Uses</label>
        <picklist>
            <picklistValues>
                <fullName>Producción agrícola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraestructura agrícola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros cultivos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivienda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Daily_Wages_Outside_Farm_Percent__c</fullName>
        <label>Daily Wages Outside Farm Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Daily_Wages_Outside_Farm__c</fullName>
        <label>Daily Wages Outside Farm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debt_Amount__c</fullName>
        <label>Debt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debt_Funding_Sources_Currency__c</fullName>
        <label>Debt Funding Sources Currency</label>
        <picklist>
            <picklistValues>
                <fullName>Quetzales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pesos colombianos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dólares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lempira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Córdoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuevo Sol</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Debt_Funding_Sources__c</fullName>
        <label>Debt Funding Sources</label>
        <picklist>
            <picklistValues>
                <fullName>Crédito familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestamista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediario (comprador)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financiera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Debt_Number__c</fullName>
        <label>Debt Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disasters__c</fullName>
        <label>Disasters</label>
        <picklist>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagas y enfermedades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eventos naturales (sequías, etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambios fuertes en precios y costos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muerte, enfermedad o lesión de familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delitos o robos graves a sus bienes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conflictos civiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Family_Size__c</fullName>
        <label>Family Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Bank_Account__c</fullName>
        <label>Has Bank Account</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_CATS_Savings_Account__c</fullName>
        <label>Has CATS Savings Account</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Made_Timely_Payments__c</fullName>
        <label>Has Made Timely Payments</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_No_Crops_Land__c</fullName>
        <label>Has No Crops Land</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Separate_Kitchen__c</fullName>
        <label>Has Separate Kitchen</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Care_System__c</fullName>
        <label>Health Care System</label>
        <picklist>
            <picklistValues>
                <fullName>SISBEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contributivo - EPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Especial (Fuerzas Armadas, Ecopetrol, Magisterio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicina prepagada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Heater__c</fullName>
        <label>Heater</label>
        <picklist>
            <picklistValues>
                <fullName>Fogón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fogón con chimenea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estufa mejorada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estufa de gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household_Head_Education_Level__c</fullName>
        <label>Household Head Education Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Household_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The farmer (contact) who is the head of this household</description>
        <label>Household Head</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LAC Households</relationshipLabel>
        <relationshipName>LAC_Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAC_Farmer_Id_Temp__c</fullName>
        <description>Deprecated: July 2013 - This field isn&apos;t needed since TaroWorks now supports related object mapping.</description>
        <label>LAC Farmer Id Temp (Deprecated)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Economic_Activities__c</fullName>
        <label>Main Economic Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Banano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cítricos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granos básicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apicultura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ganadería</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piscicultura</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Main_Farm_Land_Extension__c</fullName>
        <label>Main Farm Land Extension</label>
        <picklist>
            <picklistValues>
                <fullName>Propietario con escritura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propietario con derechos posesorios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El productor alquila toda la tierra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultiva tierra de otros sin pagarles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La tierra es propiedad comunal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De reciente adquisición/está pagándola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medianería o aparcería o colono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Income_Sources__c</fullName>
        <label>Main Income Sources</label>
        <picklist>
            <picklistValues>
                <fullName>Cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidio del gobierno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajo no agrícola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remesas y giros de  familliares</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marginalized_Types__c</fullName>
        <label>Marginalized Types</label>
        <picklist>
            <picklistValues>
                <fullName>Desplazado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persona con discapacidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mujer cabeza de hogar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adulto mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recibe subsidios gubernamentales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>No_Crops_Land_Area_Unit__c</fullName>
        <label>No Crops Land Area Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Ha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Crops_Land_Area__c</fullName>
        <label>No Crops Land Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Crops_Land_Uses__c</fullName>
        <label>No Crops Land Uses</label>
        <picklist>
            <picklistValues>
                <fullName>Banano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cítricos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granos básicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apicultura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ganadería</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piscicultura</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Member_Id__c</fullName>
        <description>Used to identify members of the same household and try to eliminate redundant households, and link people to the same household.

Deprecated: July 2013 - new registration surveys only register the household head, but in future will register other members too. This field isn&apos;t used until further notice.</description>
        <label>Other Member Id (Deprecated)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Member_Name__c</fullName>
        <description>Used to identify members of the same household and try to eliminate redundant households, and link people to the same household.

Deprecated: July 2013 - new registration surveys only register the household head, but in future will register other members too. This field isn&apos;t used until further notice.</description>
        <label>Other Member Name (Deprecated)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Propia, la están pagando</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propia, totalmente pagada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En arriendo o subarriendo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En usufructo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ocupante de hecho o poseedor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otras formas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_PPI_Score__c</fullName>
        <description>Deprecated - adding a new object &quot;LAC Household PPI Score&quot; which tracks the score over time</description>
        <label>Registration PPI Score (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rooms_Number__c</fullName>
        <label>Rooms Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Savings_Options__c</fullName>
        <label>Savings Options</label>
        <picklist>
            <picklistValues>
                <fullName>Bancos u otras entidades financieras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinero en efectivo, en la casa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprando animales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprando bienes muebles o inmuebles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En grupos de autoayuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra forma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No ahorra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Social_Stratum__c</fullName>
        <label>Social Stratum</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Coffee_Income_Currency__c</fullName>
        <label>Total Coffee Income Currency</label>
        <picklist>
            <picklistValues>
                <fullName>Quetzales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pesos colombianos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dólares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lempira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Córdoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuevo Sol</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Coffee_Income_Percent__c</fullName>
        <label>Total Coffee Income Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Coffee_Income__c</fullName>
        <label>Total Coffee Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utilities__c</fullName>
        <label>Utilities</label>
        <picklist>
            <picklistValues>
                <fullName>Energia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcantarillado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agua potable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teléfono fijo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas natural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>LAC Household</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HH-{0000000}</displayFormat>
        <label>LAC Household Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAC Households</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>